<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp">

        <View
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:background="@drawable/bottom_sheet_line_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/bottomSheetView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearFilter"
            android:layout_below="@+id/bottomSheetView"
            android:layout_alignParentEnd="true"
            android:text="@string/bottom_sheet_clear_filter"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filterNamesLl"
            android:layout_below="@id/clearFilter"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameFilter"
                android:text="@string/bottom_sheet_name_filter"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genderFilter"
                android:text="@string/bottom_sheet_filter_by_gender"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ageFilter"
                android:text="@string/bottom_sheet_filter_by_age"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/createFilter"
                android:text="@string/bottom_sheet_filter_by_created"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updatedFilter"
                android:text="@string/bottom_sheet_filter_by_updated"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>